After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722163 - osshelper: don't leak fd
osshelper: don't leak fd
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Mac OS
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-14 10:10 UTC by Justin Kim
Modified: 2014-01-14 12:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fd leakage (595 bytes, patch)
2014-01-14 10:11 UTC, Justin Kim
committed Details | Review

Description Justin Kim 2014-01-14 10:10:47 UTC
file descriptor should be closed.
Comment 1 Justin Kim 2014-01-14 10:11:09 UTC
Created attachment 266241 [details] [review]
fd leakage
Comment 2 Sebastian Dröge (slomo) 2014-01-14 10:30:34 UTC
commit c6d0f122c90cd7cf0b7a4f2afa77f4559ba77c62
Author: Justin Joy <justin.joy.9to5@gmail.com>
Date:   Tue Jan 14 19:08:49 2014 +0900

    osshelper: Don't leak fd when getting card name
    
    https://bugzilla.gnome.org/show_bug.cgi?id=722163