osshelper: Don't leak fd when getting card name

https://bugzilla.gnome.org/show_bug.cgi?id=722163